--- a/Views/MainPage.xaml
+++ b/Views/MainPage.xaml
@@ -12,6 +12,15 @@
     <Page.DataContext>
         <viewModels:MainPageVm x:Name="ViewModel"/>
     </Page.DataContext>
+    <Page.Transitions>
+        <TransitionCollection>
+            <NavigationThemeTransition>
+                <NavigationThemeTransition.DefaultNavigationTransitionInfo>
+                    <ContinuumNavigationTransitionInfo />
+                </NavigationThemeTransition.DefaultNavigationTransitionInfo>
+            </NavigationThemeTransition>
+        </TransitionCollection>
+    </Page.Transitions>
 
     <Grid Background="Black">
         <Grid.ColumnDefinitions>
@@ -125,14 +134,14 @@
                 </Grid>
             </SplitView.Pane>
             <!--Content frame-->
-            <Grid>
+            <Grid Padding="0"
+                  Margin="0">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="35"></RowDefinition>
                     <RowDefinition Height="*"></RowDefinition>
                 </Grid.RowDefinitions>
-                <ListViewItem HorizontalAlignment="Left"
-                              Margin="{StaticResource ListViewItemCompactSelectedBorderThemeThickness}"
-                              Padding="0">
+                <Button HorizontalAlignment="Left"
+                             Padding="0">
                     <SymbolIcon Symbol="Back"
                             Width="48"
                             Height="30"
@@ -146,7 +155,7 @@
                             </Core:EventTriggerBehavior.Actions>
                         </Core:EventTriggerBehavior>
                     </Interactivity:Interaction.Behaviors>
-                </ListViewItem>
+                </Button>
                 <TextBlock Grid.Row="0" 
                            Text="Home Page"
                            VerticalAlignment="Center"
