--- a/Views/PropertiesPage.xaml
+++ b/Views/PropertiesPage.xaml
@@ -10,6 +10,15 @@
     <Page.DataContext>
         <viewModels:PropertiesPageVm x:Name="Vm"></viewModels:PropertiesPageVm>
     </Page.DataContext>
+    <Page.Transitions>
+        <TransitionCollection>
+            <NavigationThemeTransition>
+                <NavigationThemeTransition.DefaultNavigationTransitionInfo>
+                    <ContinuumNavigationTransitionInfo />
+                </NavigationThemeTransition.DefaultNavigationTransitionInfo>
+            </NavigationThemeTransition>
+        </TransitionCollection>
+    </Page.Transitions>
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid.ColumnDefinitions>
@@ -22,9 +31,18 @@
         </Grid.RowDefinitions>
         <Grid HorizontalAlignment="Left"
               Grid.RowSpan="2">
-            <ListView
-                  ItemsSource="{x:Bind Vm.PropertyCatalog.Properties, Mode=OneWay}"
-                  x:Name="ListView">
+            <ListView ItemsSource="{x:Bind Vm.PropertyCatalog.Properties, Mode=OneWay}"
+                      x:Name="ListView"
+                      SelectedIndex="{x:Bind Vm.SelectedIndex, Mode=TwoWay}">
+                <ListView.Transitions>
+                        <TransitionCollection>
+                            <NavigationThemeTransition>
+                                <NavigationThemeTransition.DefaultNavigationTransitionInfo>
+                                    <ContinuumNavigationTransitionInfo />
+                                </NavigationThemeTransition.DefaultNavigationTransitionInfo>
+                            </NavigationThemeTransition>
+                        </TransitionCollection>
+                </ListView.Transitions>
                 <ListView.ItemTemplate>
                     <DataTemplate x:DataType="models:Property">
                         <Grid>
@@ -69,13 +87,90 @@
         <Grid Grid.Row="0" 
               Grid.Column="1">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition></ColumnDefinition>
-                <ColumnDefinition></ColumnDefinition>
+                <ColumnDefinition Width="*"></ColumnDefinition>
+                <ColumnDefinition Width="*"></ColumnDefinition>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"></RowDefinition>
                 <RowDefinition Height="Auto"></RowDefinition>
+                <RowDefinition Height="*"></RowDefinition>
             </Grid.RowDefinitions>
+            <TextBlock Text="{x:Bind Vm.SelectedAccommodation.Name, Mode=OneWay}"
+                       Grid.Row="0" Grid.ColumnSpan="2"
+                       HorizontalAlignment="Center"
+                       FontSize="30"
+                       Padding="9"></TextBlock>
+            <Grid Grid.Row="1" Grid.ColumnSpan="2" Grid.Column="0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"></ColumnDefinition>
+                    <ColumnDefinition Width="*"></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                </Grid.RowDefinitions>
+                <TextBlock Text="Location:"
+                       Grid.Row="1" Grid.Column="0"
+                       HorizontalAlignment="Left"
+                       Padding="15"
+                       FontSize="22"></TextBlock>
+                <TextBlock Text="{x:Bind Vm.SelectedAccommodation.Location, Mode=OneWay}"
+                       Grid.Row="1" Grid.Column="1"
+                       HorizontalAlignment="Left"
+                       Padding="15"
+                       FontSize="22"></TextBlock>
+                <TextBlock Text="Price per night:"
+                       Grid.Row="2" Grid.Column="0"
+                       HorizontalAlignment="Left"
+                       Padding="15"
+                       FontSize="22"></TextBlock>
+                <TextBlock Text="{x:Bind Vm.SelectedAccommodation.PricePerNight, Mode=OneWay}"
+                       Grid.Row="2" Grid.Column="1"
+                       HorizontalAlignment="Left"
+                       Padding="15"
+                       FontSize="22"></TextBlock>
+                <TextBlock Text="Informations:"
+                       Grid.Row="3" Grid.Column="0"
+                       HorizontalAlignment="Left"
+                       Padding="15"
+                       FontSize="22"></TextBlock>
+                <TextBlock Text="{x:Bind Vm.SelectedAccommodation.Information, Mode=OneWay}"
+                       Grid.Row="3" Grid.Column="1"
+                       HorizontalAlignment="Left"
+                       Padding="15"
+                       TextWrapping="WrapWholeWords"
+                       FontSize="22"></TextBlock>
+            </Grid>
+            <Grid HorizontalAlignment="Stretch"
+                  VerticalAlignment="Stretch"
+                  Grid.Row="2" Grid.Column="0">
+                <GridView ItemsSource="{x:Bind Vm.SelectedStringValues, Mode=OneWay}"
+                          SelectedIndex="{x:Bind Vm.SelectedImageIndex, Mode=TwoWay}">
+                    <GridView.ItemTemplate>
+                        <DataTemplate x:DataType="viewModels:StringValue">
+                            <Image Width="150"
+                               Height="150"
+                               Source="{x:Bind Value}"></Image>
+                        </DataTemplate>
+                    </GridView.ItemTemplate>
+                </GridView>
+            </Grid>
+            <Grid Grid.Row="2" Grid.Column="1"
+                  Padding="10">
+                <Image Stretch="UniformToFill"
+                       Source="{x:Bind Vm.SelectedImageString, Mode=OneWay}">
+                    <Image.Transitions>
+                        <TransitionCollection>
+                            <ContentThemeTransition>
+                                <ContentThemeTransition.HorizontalOffset > 50 </ContentThemeTransition.HorizontalOffset>
+                            </ContentThemeTransition>
+                        </TransitionCollection>
+                    </Image.Transitions>
+                </Image>
+            </Grid>
         </Grid>
     </Grid>
 </Page>
