--- a/Views/SearchPage.xaml
+++ b/Views/SearchPage.xaml
@@ -12,6 +12,15 @@
     <Page.DataContext>
         <viewModels:SearchPageVm x:Name="Vm"></viewModels:SearchPageVm>
     </Page.DataContext>
+    <Page.Transitions>
+        <TransitionCollection>
+            <NavigationThemeTransition>
+                <NavigationThemeTransition.DefaultNavigationTransitionInfo>
+                    <ContinuumNavigationTransitionInfo />
+                </NavigationThemeTransition.DefaultNavigationTransitionInfo>
+            </NavigationThemeTransition>
+        </TransitionCollection>
+    </Page.Transitions>
 
     <Grid>
         <Grid.Background>
