--- a/Views/FrontPage.xaml
+++ b/Views/FrontPage.xaml
@@ -2,10 +2,14 @@
     x:Class="School.OnlineBookingSystem.Views.FrontPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:School.OnlineBookingSystem.Views"
+    xmlns:common="using:School.OnlineBookingSystem.Common"
+    xmlns:viewModels="using:School.OnlineBookingSystem.ViewModels"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
+    <Page.DataContext>
+        <viewModels:FrontPageVm x:Name="FrontPageVm"></viewModels:FrontPageVm>
+    </Page.DataContext>
     <Page.Transitions>
         <TransitionCollection>
             <NavigationThemeTransition>
@@ -16,7 +20,25 @@
         </TransitionCollection>
     </Page.Transitions>
 
-    <Grid Background="Gold">
+    <Grid Background="Transparent">
+        <StackPanel Orientation="Horizontal">
+            <SymbolIcon Symbol="Favorite"
+                    Foreground="White"></SymbolIcon>
+            <SymbolIcon Symbol="Favorite"
+                    Foreground="Yellow"></SymbolIcon>
+            <SymbolIcon Symbol="Favorite"
+                    Foreground="Yellow"></SymbolIcon>
+            <SymbolIcon Symbol="Favorite"
+                    Foreground="Yellow"></SymbolIcon>
+        </StackPanel>
         
+       
+        <FlipView ItemsSource="{x:Bind FrontPageVm.Images, Mode=OneWay}">
+            <FlipView.ItemTemplate>
+                <DataTemplate x:DataType="common:StringValue">
+                    <Image Source="{x:Bind Value, Mode=OneWay}"></Image>
+                </DataTemplate>
+            </FlipView.ItemTemplate>
+        </FlipView>
     </Grid>
 </Page>
