--- a/Views/PropertiesPage.xaml
+++ b/Views/PropertiesPage.xaml
@@ -7,6 +7,8 @@
     xmlns:viewModels="using:School.OnlineBookingSystem.ViewModels"
     xmlns:models="using:School.OnlineBookingSystem.Models"
     xmlns:common="using:School.OnlineBookingSystem.Common"
+    xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
+    xmlns:core="using:Microsoft.Xaml.Interactions.Core"
     mc:Ignorable="d">
     <Page.DataContext>
         <viewModels:PropertiesPageVm x:Name="Vm"></viewModels:PropertiesPageVm>
@@ -28,13 +30,18 @@
         <SplitView OpenPaneLength="450"
                    CompactPaneLength="142"
                    DisplayMode="CompactOverlay"
-                   IsPaneOpen="True"
-                   x:Name="SplitView">
+                   IsPaneOpen="{x:Bind Vm.IsPaneOpen, Mode=TwoWay}">
             <SplitView.Pane>
-                    <ListView ItemsSource="{x:Bind Vm.PropertyCatalog.Properties, Mode=OneWay}"
-                      x:Name="ListView"
-                      SelectedIndex="{x:Bind Vm.SelectedIndex, Mode=TwoWay}">
-                        <ListView.Transitions>
+                    <ListView ItemsSource="{x:Bind Vm.PropertyCatalog.Collection, Mode=OneWay}"
+                              SelectedIndex="{x:Bind Vm.SelectedIndex, Mode=TwoWay}">
+                        <interactivity:Interaction.Behaviors>
+                            <core:EventTriggerBehavior EventName="Tapped">
+                                <core:EventTriggerBehavior.Actions>
+                                    <core:InvokeCommandAction Command="{x:Bind Vm.OpenPane}"/>
+                                </core:EventTriggerBehavior.Actions>
+                            </core:EventTriggerBehavior>
+                        </interactivity:Interaction.Behaviors>
+                    <ListView.Transitions>
                             <TransitionCollection>
                                 <NavigationThemeTransition>
                                     <NavigationThemeTransition.DefaultNavigationTransitionInfo>
@@ -109,7 +116,7 @@
                         <RowDefinition Height="*"></RowDefinition>
                         <RowDefinition Height="Auto"></RowDefinition>
                     </Grid.RowDefinitions>
-                    <TextBlock Text="{x:Bind Vm.SelectedAccommodation.Name, Mode=OneWay}"
+                    <TextBlock Text="{x:Bind Vm.SelectedProperty.Name, Mode=OneWay}"
                        Grid.Row="0" Grid.ColumnSpan="2"
                        HorizontalAlignment="Center"
                        FontSize="30"
@@ -133,7 +140,7 @@
                        HorizontalAlignment="Left"
                        Padding="15"
                        FontSize="22"></TextBlock>
-                        <TextBlock Text="{x:Bind Vm.SelectedAccommodation.Location, Mode=OneWay}"
+                        <TextBlock Text="{x:Bind Vm.SelectedProperty.Location, Mode=OneWay}"
                        Grid.Row="1" Grid.Column="1"
                        HorizontalAlignment="Left"
                        Padding="15"
@@ -143,7 +150,7 @@
                        HorizontalAlignment="Left"
                        Padding="15"
                        FontSize="22"></TextBlock>
-                        <TextBlock Text="{x:Bind Vm.SelectedAccommodation.PricePerNight, Mode=OneWay}"
+                        <TextBlock Text="{x:Bind Vm.SelectedProperty.PricePerNight, Mode=OneWay}"
                        Grid.Row="2" Grid.Column="1"
                        HorizontalAlignment="Left"
                        Padding="15"
@@ -153,18 +160,21 @@
                        HorizontalAlignment="Left"
                        Padding="15"
                        FontSize="22"></TextBlock>
-                        <TextBlock Text="{x:Bind Vm.SelectedAccommodation.Information, Mode=OneWay}"
+                        <TextBlock Text="{x:Bind Vm.SelectedProperty.Information, Mode=OneWay}"
                        Grid.Row="3" Grid.Column="1"
                        HorizontalAlignment="Left"
                        Padding="15"
                        TextWrapping="WrapWholeWords"
                        FontSize="22"></TextBlock>
                         <Button Content="Book"
-                       Grid.Row="4" Grid.Column="1"
-                       HorizontalAlignment="Right"
-                       Margin="15"
-                       Width="150"
-                       FontSize="22"></Button>
+                               Grid.Row="4" Grid.Column="1"
+                               HorizontalAlignment="Right"
+                               Margin="15"
+                               Width="150"
+                               FontSize="22"
+                               Command="{x:Bind Vm.NavigationControl.NavigateToCommand, Mode=OneWay}"
+                               CommandParameter="CreateBookingView">
+                        </Button>
                     </Grid>
                     <Grid HorizontalAlignment="Stretch"
                   VerticalAlignment="Stretch"
@@ -172,12 +182,12 @@
                   Grid.ColumnSpan="2"
                   Height="160">
                         <GridView ItemsSource="{x:Bind Vm.SelectedStringValues, Mode=OneWay}"
-                          SelectedIndex="{x:Bind Vm.SelectedImageIndex, Mode=TwoWay}">
+                                  SelectedIndex="{x:Bind Vm.SelectedImageIndex, Mode=TwoWay}">
                             <GridView.ItemTemplate>
                                 <DataTemplate x:DataType="common:StringValue">
                                     <Image Width="150"
-                               Height="150"
-                               Source="{x:Bind Value}">
+                                           Height="150"
+                                           Source="{x:Bind Value}"> 
                                     </Image>
                                 </DataTemplate>
                             </GridView.ItemTemplate>
