--- a/Views/PropertiesPage.xaml
+++ b/Views/PropertiesPage.xaml
@@ -47,7 +47,7 @@
 
             <SplitView.Pane>
 
-                <ListView ItemsSource="{x:Bind Vm.PropertyCatalog.Properties, Mode=OneWay}"
+                <ListView ItemsSource="{x:Bind Vm.PropertyCatalog.Collection, Mode=OneWay}"
 
                       x:Name="ListView"
 
@@ -205,7 +205,7 @@
 
                     </Grid.RowDefinitions>
 
-                    <TextBlock Text="{x:Bind Vm.SelectedAccommodation.Name, Mode=OneWay}"
+                    <TextBlock Text="{x:Bind Vm.SelectedProperty.Name, Mode=OneWay}"
 
                        Grid.Row="0" Grid.ColumnSpan="2"
 
@@ -256,7 +256,7 @@
 
                        FontSize="22" Margin="0,0,0,0.333" Width="117"></TextBlock>
 
-                        <TextBlock Text="{x:Bind Vm.SelectedAccommodation.Location, Mode=OneWay}"
+                        <TextBlock Text="{x:Bind Vm.SelectedProperty.Location, Mode=OneWay}"
 
                        Grid.Row="1" Grid.Column="1"
 
@@ -278,7 +278,7 @@
 
                        FontSize="22" Margin="0,0.667,0,57.333" Width="203" Grid.ColumnSpan="2"/>
 
-                        <TextBlock Text="{x:Bind Vm.SelectedAccommodation.PricePerNight, Mode=OneWay}"
+                        <TextBlock Text="{x:Bind Vm.SelectedProperty.PricePerNight, Mode=OneWay}"
 
                        Grid.Row="2" Grid.Column="1"
 
@@ -306,7 +306,7 @@
                         </StackPanel>
 
 
-                        <TextBlock Text="{x:Bind Vm.SelectedAccommodation.Information, Mode=OneWay}"
+                        <TextBlock Text="{x:Bind Vm.SelectedProperty.Information, Mode=OneWay}"
 
                        Grid.Row="3" Grid.Column="1"
 
