--- a/Views/RegisterPage.xaml
+++ b/Views/RegisterPage.xaml
@@ -21,19 +21,19 @@
                         Width="300"
                         Grid.Column="1">
                 <TextBox Header="Full Name"
-                         Text="{x:Bind Vm.ViewData[0], Mode=TwoWay}"></TextBox>
+                         Text="{x:Bind Vm.FullName, Mode=TwoWay}"></TextBox>
                 <TextBox Header="Username"
                          Margin="0,10,0,0"
-                         Text="{x:Bind Vm.ViewData[1], Mode=TwoWay}"></TextBox>
+                         Text="{x:Bind Vm.Username, Mode=TwoWay}"></TextBox>
                 <TextBox Header="Password"
                          Margin="0,10,0,0"
-                         Text="{x:Bind Vm.ViewData[2], Mode=TwoWay}"></TextBox>
+                         Text="{x:Bind Vm.Password, Mode=TwoWay}"></TextBox>
                 <TextBox Header="Email Adress"
                          Margin="0,10,0,0"
-                         Text="{x:Bind Vm.ViewData[3], Mode=TwoWay}"></TextBox>
+                         Text="{x:Bind Vm.Phone, Mode=TwoWay}"></TextBox>
                 <TextBox Header="Phone Number"
                          Margin="0,10,0,0"
-                         Text="{x:Bind Vm.ViewData[4], Mode=TwoWay}"></TextBox>
+                         Text="{x:Bind Vm.Email, Mode=TwoWay}"></TextBox>
                 <CheckBox Content="Terms and Conditions"
                           Margin="0,10,0,0"></CheckBox>
                 <Button Content="Register"
