--- a/Views/MainPage.xaml
+++ b/Views/MainPage.xaml
@@ -61,7 +61,7 @@
                             <Interactivity:Interaction.Behaviors>
                                 <Core:EventTriggerBehavior EventName="Tapped">
                                     <Core:EventTriggerBehavior.Actions>
-                                        <Core:InvokeCommandAction Command="{x:Bind ViewModel.NavigateToCommand, Mode=OneWay}"
+                                        <Core:InvokeCommandAction Command="{x:Bind ViewModel.NavigationControl.NavigateToCommand, Mode=OneWay}"
                                                                   CommandParameter="FrontPage"/>
                                     </Core:EventTriggerBehavior.Actions>
                                 </Core:EventTriggerBehavior>
@@ -99,7 +99,7 @@
                             <Interactivity:Interaction.Behaviors>
                                 <Core:EventTriggerBehavior EventName="Tapped">
                                     <Core:EventTriggerBehavior.Actions>
-                                        <Core:InvokeCommandAction Command="{x:Bind ViewModel.NavigateToCommand, Mode=OneWay}"
+                                        <Core:InvokeCommandAction Command="{x:Bind ViewModel.NavigationControl.NavigateToCommand, Mode=OneWay}"
                                                                   CommandParameter="SearchPage"/>
                                     </Core:EventTriggerBehavior.Actions>
                                 </Core:EventTriggerBehavior>
@@ -124,7 +124,7 @@
                             <Interactivity:Interaction.Behaviors>
                                 <Core:EventTriggerBehavior EventName="Tapped">
                                     <Core:EventTriggerBehavior.Actions>
-                                        <Core:InvokeCommandAction Command="{x:Bind ViewModel.NavigateToCommand, Mode=OneWay}"
+                                        <Core:InvokeCommandAction Command="{x:Bind ViewModel.NavigationControl.NavigateToCommand, Mode=OneWay}"
                                                                   CommandParameter="PropertiesPage"/>
                                     </Core:EventTriggerBehavior.Actions>
                                 </Core:EventTriggerBehavior>
@@ -155,7 +155,7 @@
                     <Interactivity:Interaction.Behaviors>
                         <Core:EventTriggerBehavior EventName="Tapped">
                             <Core:EventTriggerBehavior.Actions>
-                                <Core:InvokeCommandAction Command="{x:Bind ViewModel.GoBackCommand}"/>
+                                <Core:InvokeCommandAction Command="{x:Bind ViewModel.NavigationControl.GoBackCommand}"/>
                             </Core:EventTriggerBehavior.Actions>
                         </Core:EventTriggerBehavior>
                     </Interactivity:Interaction.Behaviors>
@@ -164,9 +164,7 @@
                            Text="Home Page"
                            VerticalAlignment="Center"
                            HorizontalAlignment="Center" Margin="658,14,657,14"></TextBlock>
-                <Frame Grid.Row="1"
-                       x:Name="MainFrame"
-                       SourcePageType="{x:Bind ViewModel.MainFrame.SourcePageType, Mode=OneWay}" Grid.RowSpan="2">
+                <Frame SourcePageType="{x:Bind ViewModel.NavigationControl.MainFrame.SourcePageType, Mode=TwoWay}" Grid.Row="1">
                 </Frame>
             </Grid>
 
