--- a/Views/RegisterPage.xaml
+++ b/Views/RegisterPage.xaml
@@ -9,6 +9,15 @@
     <Page.DataContext>
         <viewModels:RegisterPageVm x:Name="Vm"></viewModels:RegisterPageVm>
     </Page.DataContext>
+    <Page.Transitions>
+        <TransitionCollection>
+            <NavigationThemeTransition>
+                <NavigationThemeTransition.DefaultNavigationTransitionInfo>
+                    <EntranceNavigationTransitionInfo />
+                </NavigationThemeTransition.DefaultNavigationTransitionInfo>
+            </NavigationThemeTransition>
+        </TransitionCollection>
+    </Page.Transitions>
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid>
