--- a/Views/PropertiesPage.xaml
+++ b/Views/PropertiesPage.xaml
@@ -143,7 +143,7 @@
 
                                    Grid.Column="2"
 
-                                   Text="{x:Bind PricePerNight, Mode=OneWay}"
+                                   Text="{x:Bind Name, Mode=OneWay}"
 
                                    Margin="10"></TextBlock>
 
@@ -278,7 +278,7 @@
 
                        FontSize="22" Margin="0,0.667,0,57.333" Width="203" Grid.ColumnSpan="2"/>
 
-                        <TextBlock Text="{x:Bind Vm.SelectedProperty.PricePerNight, Mode=OneWay}"
+                        <TextBlock Text="{x:Bind Vm.SelectedProperty.Id, Mode=OneWay}"
 
                        Grid.Row="2" Grid.Column="1"
 
